--- a/mypy.ini
+++ b/mypy.ini
@@ -30,6 +30,7 @@ no_implicit_optional = true
 warn_unreachable = true
 warn_no_return = true
 warn_unused_configs = true
+warn_incomplete_stub = true
 
 # ------------------------------------------------------------------------------
 # Import Discovery
@@ -43,7 +44,7 @@ follow_imports = normal
 # Exclude venvs, build artifacts, caches, migrations, and .pyi files.
 # Add 'tests/' here if you want to globally exclude tests.
 # Remove 'tests/' if you want [mypy-tests.*] to apply.
-exclude = ^(venv/|\.venv/|build/|dist/|\.mypy_cache/|__pycache__/|migrations/|\.env|.*\.pyi$|tests/)
+exclude = ^(venv/|\.venv/|build/|dist/|\.mypy_cache/|__pycache__/|.*/migrations/.*|\.env$|.*\.pyi$|^wfcast/users/|^tests/)
 
 # ------------------------------------------------------------------------------
 # Reporting and Output
@@ -60,10 +61,10 @@ show_column_numbers = true
 # Newline-indented is more readable for multiple plugins.
 plugins =
     mypy_django_plugin.main,
-    # Other plugins...
+# Other plugins...
 
 [mypy.plugins.django-stubs]
-django_settings_module = "config.settings"
+django_settings_module = "config.settings.local"
 strict_settings = true
 
 # ==============================================================================
@@ -88,6 +89,7 @@ ignore_missing_imports = True
 # These rules apply if 'tests/' is NOT in the global 'exclude' regex above.
 disallow_untyped_defs = false
 ignore_missing_imports = true
+ignore_errors = true
 
 [mypy-vendor.*]
 ignore_missing_imports = true
@@ -97,3 +99,15 @@ ignore_missing_imports = true
 # Consider adding other third-party libraries you use that lack stubs:
 # [mypy-requests.*]
 # ignore_missing_imports = true
+
+[mypy-wfcast.users.*]
+ignore_errors = true
+
+[mypy-wfcast.users]
+ignore_errors = true
+
+[mypy-allauth.*]
+ignore_missing_imports = true
+
+[mypy-factory.*]
+ignore_missing_imports = true
